updating to .net 5.0

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "WebSettings": {
+    "GOOGLEBASEURL": "https://www.google.com",
+    "RECAPTCHAAPI": "/recaptcha/api/siteverify"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
