--- a/dqcsweb.csproj
+++ b/dqcsweb.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NWebsec.AspNetCore.Middleware" Version="3.0.0" />
     <PackageReference Include="Sendgrid" Version="9.21.2" />
   </ItemGroup>
 
